final commit before ur

--- a/app/views/apps/_user-research_beis-user-0905/views/dashboard.html
+++ b/app/views/apps/_user-research_beis-user-0905/views/dashboard.html
@@ -16,17 +16,18 @@
    <div class="govuk-grid-row">
      <div class="govuk-grid-column-one-third">
        <h2 class="govuk-heading-m">Programmes</h2>
+       <p class="govuk-body">Manage programmes and delivery partner projects.</p>
        <ul class="govuk-list govuk-list--links">
          <li><a href="#">Add a programme</a>
-         <li><a href="#">Programmes</a></li>
+         <li><a href="#">Programmes and projects</a></li>
        </ul>
              <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
              <h2 class="govuk-heading-m">Trackers</h2>
-             <p class="govuk-body">Review inbound financial trackers.</p>
+             <p class="govuk-body">Review and approve financial trackers for use in reporting.</p>
              <ul class="govuk-list govuk-list--links">
-               <li><a href="tracker-review/index">This period's financial trackers</a>
+               <li><a href="tracker-review/index">Financial trackers</a>
                <!-- <li><a href="#">Approve a tracker</a> -->
-               <li><a href="trackers/">View previous submissions</a></li>
+               <li><a href="trackers/">Previous submissions</a></li>
              </ul>
              <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
              <h2 class="govuk-heading-m">Reports</h2>
@@ -42,13 +43,13 @@
              <h2 class="govuk-heading-m">Manage users</h2>
              <ul class="govuk-list govuk-list--links">
                <li><a href="#">Invite a new user</a></li>
-               <li><a href="#">View existing users</a>
+               <li><a href="#">Existing users</a>
              </ul>
              <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
              <h2 class="govuk-heading-m">Manage delivery partners</h2>
              <ul class="govuk-list govuk-list--links">
-               <li><a href="#">Create a new delivery partner account</a></li>
-               <li><a href="#">View existing delivery partners</a>
+               <li><a href="#">Create a new delivery partner</a></li>
+               <li><a href="#">Existing delivery partners</a>
              </ul>
        </div>
        <div class="govuk-grid-column-one-third panel-blue">
