--- a/app/views/apps/_user-research_delivery-partner-0905/views/dashboard.html
+++ b/app/views/apps/_user-research_delivery-partner-0905/views/dashboard.html
@@ -15,10 +15,18 @@
    </div>
    <div class="govuk-grid-row">
      <div class="govuk-grid-column-one-third">
-       <h2 class="govuk-heading-m">Programmes and activities</h2>
+       <h2 class="govuk-heading-m">Projects and activities</h2>
        <ul class="govuk-list govuk-list--links">
-         <li><a href="programmes/add/start">Add a programme</a>
-         <li><a href="programmes/">Programmes and activities</a></li>
+         <li><a href="programmes/add/start">Add a project</a>
+         <li><a href="programmes/">Projects and activities</a></li>
+       </ul>
+       <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
+       <h2 class="govuk-heading-m">Financial trackers</h2>
+       <p class="govuk-body">All your reporting data lives here.</p>
+       <ul class="govuk-list govuk-list--links">
+         <li><a href="trackers/submit/start">Submit a new tracker</a>
+         <!-- <li><a href="#">Approve a tracker</a> -->
+         <li><a href="trackers/">View previous submissions</a></li>
        </ul>
      </div>
 
@@ -28,14 +36,7 @@
                <li><a href="#">Invite a new user</a></li>
                <li><a href="#">View existing users</a>
              </ul>
-             <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
-             <h2 class="govuk-heading-m">Financial trackers</h2>
-             <p class="govuk-body">All your reporting data lives here.</p>
-             <ul class="govuk-list govuk-list--links">
-               <li><a href="trackers/submit/start">Submit a new tracker</a>
-               <!-- <li><a href="#">Approve a tracker</a> -->
-               <li><a href="trackers/">View previous submissions</a></li>
-             </ul>
+
        </div>
        <div class="govuk-grid-column-one-third panel-blue">
          <h3 class="govuk-heading-m">To do list</h3>
