--- a/app/views/apps/_user-research_delivery-partner-0905/views/programmes/activity/add/index.html
+++ b/app/views/apps/_user-research_delivery-partner-0905/views/programmes/activity/add/index.html
@@ -295,7 +295,7 @@
     </fieldset>
 
 
-    <a class="govuk-button" href="success.html">Continue</a>
+    <a class="govuk-button" href="success.html">Add activity</a>
 </div>
 </div>
 
