--- a/app/views/apps/_user-research_delivery-partner-0905/views/programmes/activity/add/success.html
+++ b/app/views/apps/_user-research_delivery-partner-0905/views/programmes/activity/add/success.html
@@ -17,14 +17,17 @@
   Your activity ID<br><strong>HDJ2123F</strong>
 </div>
 </div>
-  <p class="govuk-body-lead">You can now report financial data against this activity</p>
+  <p class="govuk-body-lead">You can now report financial data against this activity.</p>
+  <p class="govuk-body">
+    Your <a href="/public/images/docs/oda-tracker-01-08052019.xlsx">financial tracker template spreadsheet</a> has been updated to include this activity.
+    </p>
     <h1 class="govuk-heading-xl">
       What would you like to do next?
     </h1>
     <ul class="govuk-list">
       <li><a href="index.html">add another activity</a></li>
-      <li><a href="../../details.html">view added activities for this programme</a></li>
-      <li><a href="../../index.html">go back to all programmes</a></li>
+      <li><a href="../../details.html">view added activities for this project</a></li>
+      <li><a href="../../index.html">go back to all projects</a></li>
     </ul>
 </div>
 </div>
