--- a/app/views/apps/_user-research_delivery-partner-0905/views/programmes/add/index.html
+++ b/app/views/apps/_user-research_delivery-partner-0905/views/programmes/add/index.html
@@ -11,28 +11,15 @@
 <div class="govuk-grid-column-two-thirds">
     <fieldset class="govuk-fieldset">
       <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
-        <h1 class="govuk-heading-xl">Add a programme</h1>
+        <h1 class="govuk-heading-xl">Add a project</h1>
       </legend>
       <div class="govuk-form-group">
       <label class="govuk-label" for="address-line-1">
-        Programme title
+        Project title
       </label>
       <input class="govuk-input" id="address-line-1" name="address-line-1" type="text">
     </div>
 
-      <div class="govuk-form-group">
-      <label class="govuk-label" for="address-line-1">
-        ODA description key
-      </label>
-      <input class="govuk-input" id="address-line-1" name="address-line-1" type="text">
-    </div>
-
-    <div class="govuk-form-group">
-      <label class="govuk-label" for="address-line-1">
-        General activity name
-      </label>
-      <input class="govuk-input" id="address-line-1" name="address-line-1" type="text">
-    </div>
     <div class="govuk-form-group">
       <label class="govuk-label" for="address-line-1">
         Channel of delivery code
@@ -165,50 +152,40 @@
   <label class="govuk-label" for="sort">
 Climate change adaption
   </label>
-  <select class="govuk-select">
-    <option value="published">Not targeted</option>
-    <option value="updated" selected>Newton Fund</option>
-  </select>
+  <input class="govuk-input" id="address-postcode" name="address-postcode" type="text">
+
 </div>
 
       <div class="govuk-form-group">
   <label class="govuk-label" for="sort">
 Climate change mitigation
   </label>
-  <select class="govuk-select">
-    <option value="published">Not targeted</option>
-    <option value="updated" selected>Newton Fund</option>
-  </select>
+  <input class="govuk-input" id="address-postcode" name="address-postcode" type="text">
+
 </div>
 
       <div class="govuk-form-group">
   <label class="govuk-label" for="sort">
 Desertification
   </label>
-  <select class="govuk-select">
-    <option value="published">Not targeted</option>
-    <option value="updated" selected>Newton Fund</option>
-  </select>
+  <input class="govuk-input" id="address-postcode" name="address-postcode" type="text">
+
 </div>
 
       <div class="govuk-form-group">
   <label class="govuk-label" for="sort">
 Biodiversity
   </label>
-  <select class="govuk-select">
-    <option value="published">Not targeted</option>
-    <option value="updated" selected>Newton Fund</option>
-  </select>
+  <input class="govuk-input" id="address-postcode" name="address-postcode" type="text">
+
 </div>
 
       <div class="govuk-form-group">
   <label class="govuk-label" for="sort">
 Gender
   </label>
-  <select class="govuk-select">
-    <option value="published">Not targeted</option>
-    <option value="updated" selected>Newton Fund</option>
-  </select>
+  <input class="govuk-input" id="address-postcode" name="address-postcode" type="text">
+
 </div>
 
 
@@ -218,7 +195,7 @@ Gender
     </fieldset>
 
 
-    <a class="govuk-button" href="success.html">Continue</a>
+    <a class="govuk-button" href="success.html">Add project</a>
 </div>
 </div>
 
