--- a/app/views/apps/_user-research_delivery-partner-0905/views/programmes/add/success.html
+++ b/app/views/apps/_user-research_delivery-partner-0905/views/programmes/add/success.html
@@ -13,10 +13,10 @@
     <div class="govuk-grid-column-two-thirds">
       <div class="govuk-panel govuk-panel--confirmation">
     <h1 class="govuk-panel__title">
-      Programme added
+      Project added
     </h1>
     <div class="govuk-panel__body">
-      Your programme ID<br><strong>HDJ2123F</strong>
+      Your project ID<br><strong>HDJ2123F</strong>
     </div>
     </div>
     </div>
@@ -28,9 +28,9 @@
         What would you like to do next?
       </h1>
     <ul class="govuk-list">
-      <li><a href="../activity/add/">Add an activity for this programme</a></li>
-      <li><a href="index.html">Add another programme</a></li>
-      <li><a href="../index">View all programmes</a></li>
+      <li><a href="../activity/add/">Add an activity for this project</a></li>
+      <li><a href="index.html">Add another project</a></li>
+      <li><a href="../index">View all project</a></li>
     </ul>
 
 </div>
