--- a/app/views/apps/_user-research_delivery-partner-0905/views/index.html
+++ b/app/views/apps/_user-research_delivery-partner-0905/views/index.html
@@ -24,7 +24,7 @@
 
    </div>
    <div class="govuk-grid-row">
-     <div class="column-full">
+     <div class="govuk-grid-column-full">
               <h3 class="govuk-heading-m">Sign in</h3>
              <form>
               <div class="govuk-form-group">
