--- a/app/views/apps/_user-research_delivery-partner-0905/views/programmes/add/start.html
+++ b/app/views/apps/_user-research_delivery-partner-0905/views/programmes/add/start.html
@@ -6,12 +6,13 @@
   <a href="#" class="govuk-back-link">Back</a>
 
   <main class="govuk-main-wrapper">
-    <h1 class="govuk-heading-xl">Add a programme</h1>
-    <p class="govuk-body-lead">Add details about a programme in order to subsequently add activities to report against.</p>
+    <h1 class="govuk-heading-xl">Add a project</h1>
+    <p class="govuk-body-lead">Add details about a project in order to subsequently add activities to report against.</p>
     <h2 class="govuk-heading-m">You will need</h2>
     <ul class="govuk-list govuk-list--bullet">
-      <li>details of your programme</li>
-      <li>a unique ID for your programme</li>
+      <li>details of your project</li>
+      <li>a unique ID for your project</li>
+      <li>the programme call it supports</li>
     </ul>
     <a class="govuk-button govuk-button--start" href="index">Start</a>
 
