--- a/app/views/apps/_user-research_delivery-partner-0905/views/programmes/details.html
+++ b/app/views/apps/_user-research_delivery-partner-0905/views/programmes/details.html
@@ -13,15 +13,15 @@
       <div class="govuk-grid-column-full">
 
 <div class="govuk-inset-text">
-  <p class="govuk-body">You have no activities associated with this programme.</p>
+  <p class="govuk-body">You have no activities associated with this project.</p>
   <a href="activity/add/" class="govuk-button govuk-button--secondary">Add an activity</a>
   </div>
 
 <table class="govuk-table govuk-table--small hide">
   <thead class="govuk-table__head">
     <tr class="govuk-table__row">
-      <th class="govuk-table__header" scope="col">Programme name</th>
-      <th class="govuk-table__header" scope="col">Programme ID</th>
+      <th class="govuk-table__header" scope="col">Project name</th>
+      <th class="govuk-table__header" scope="col">Project ID</th>
       <th class="govuk-table__header" scope="col">Fund</th>
       <th class="govuk-table__header" scope="col">Status</th>
       <th class="govuk-table__header" scope="col">Budet</th>
