--- a/app/views/apps/_user-research_delivery-partner-0905/views/trackers/submit/file-upload/upload.html
+++ b/app/views/apps/_user-research_delivery-partner-0905/views/trackers/submit/file-upload/upload.html
@@ -21,7 +21,7 @@
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
 
-          <p class="govuk-body-lead">Upload your excel (xls) spreadsheet for review.</p>
+          <p class="govuk-body-lead">Upload your Excel (XLS) spreadsheet for review.</p>
 
 <form>
   <div class="govuk-form-group">
@@ -30,7 +30,7 @@
     </label>
     <input class="govuk-file-upload" id="file-upload-1" name="file-upload-1" type="file">
   </div>
-         <a href="choose-journey.html" class="govuk-button govuk">Submit</a>
+         <a href="choose-journey.html" class="govuk-button govuk">Upload</a>
   </form>
 
 
