--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -37,6 +37,7 @@
 
 {% block header %}
   {% include "includes/cookie-banner.html" %}
+  {% include "includes/prototype-banner.html" %}
   {# Set serviceName in config.js. #}
   {{ govukHeader({
     homepageUrl: "/",
@@ -50,16 +51,7 @@
   {% block footer %}
     {{ govukFooter({
       meta: {
-        items: [
-          {
-            href: "https://govuk-prototype-kit.herokuapp.com/",
-            text: "GOV.UK Prototype Kit " + releaseVersion
-          },
-          {
-            href: "/prototype-admin/clear-data",
-            text: "Clear data"
-          }
-        ]
+
       }
     }) }}
   {% endblock %}
