re-write of prototype
single app for both main journeys. created absolute links in express. started uis for dashboard. Satarted work for full width uis

--- a/app/views/layout-subapp.html
+++ b/app/views/layout-subapp.html
@@ -41,10 +41,10 @@
   {{ govukHeader({
     homepageUrl: "/",
     serviceName: serviceName,
-    serviceUrl: "/",
+    serviceUrl: computedPath,
     containerClasses: "govuk-width-container"
   }) }}
-  {% include "includes/prototype-banner.html" %}
+  {% include "includes/account-navigation.html" %}
 {% endblock %}
 
 {% if useAutoStoreData %}
