--- a/app/views/includes/scripts.html
+++ b/app/views/includes/scripts.html
@@ -2,14 +2,17 @@
 <script src="/public/javascripts/jquery-3.4.1.js"></script>
 
 {% for scriptUrl in extensionConfig.scripts %}
-  <!-- <script src="{{scriptUrl}}"></script> -->
+  <script src="{{scriptUrl}}"></script>
 {% endfor %}
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js" type="text/javascript"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/c3/0.4.18/c3.min.js" type="text/javascript"></script>
 
+
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jexcel/2.0.0/js/jquery.jexcel.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jexcel/2.0.0/js/jquery.jdropdown.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jexcel/2.0.0/css/jquery.jexcel.min.css" type="text/css" />
+<script src="public/javascripts{{ currentApp.urlPaths.scriptsPath + currentApp.config.jsFile | d('sub-application.js') }}" charset="utf-8"></script>
 
 {% if useAutoStoreData %}
   <script src="/public/javascripts/auto-store-data.js"></script>
