--- a/app/views/apps/_wip_odart_130519/views/beis/dashboard.html
+++ b/app/views/apps/_wip_odart_130519/views/beis/dashboard.html
@@ -25,7 +25,7 @@
    <div class="govuk-grid-row">
      <div class="govuk-grid-column-two-thirds">
        <h2 class="govuk-heading-m">Programme management</h2>
-       <p class="govuk-body">Manage programmes and delivery partner projects.</p>
+       <p class="govuk-body">Add new programmes and accept.</p>
        <ul class="govuk-list govuk-list--links">
          <li><a href="#">Add a programme</a>
          <li><a href="#">Programmes and projects</a></li>
