--- a/app/views/apps/_wip_odart_130519/assets/sass/selectize.scss
+++ b/app/views/apps/_wip_odart_130519/assets/sass/selectize.scss
@@ -173,7 +173,7 @@
       -webkit-box-sizing: border-box;
       box-sizing: border-box;
       width: 100%;
-      height: 40px;
+      min-height: 40px;
       margin-top: 0;
       padding: 5px;
       border: 2px solid #0b0c0c;
