--- a/app/views/includes/account-navigation.html
+++ b/app/views/includes/account-navigation.html
@@ -36,7 +36,7 @@
 
 			</ul>
 		</nav>
-        <h2 class="govuk-heading-m"><span class="company-name">{delivery partner name}</span></h2>
+        <h2 class="govuk-heading-m"><span class="company-name">Ty Fairclough — BEIS</span></h2>
 
 	</div>
 </div>
